# AgentConversationRetrievalSystem

./: .env.example  .gitignore  pyproject.toml
docs/: implementation_plan.md  requirements.md
src/: config.py
src/core/: conversation_manager.py
src/db/: __init__.py  connection.py  schema.py
src/utils/: logging_config.py
tests/core/: test_conversation_manager.py
